--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "Obsidian Nord",
-  "baseFontSize": 19,
+  "cssTheme": "Blue Topaz",
+  "baseFontSize": 16,
   "theme": "obsidian"
 }
