--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "accentColor": "",
   "cssTheme": "Blue Topaz",
   "baseFontSize": 16,
-  "theme": "obsidian"
+  "theme": "obsidian",
+  "translucency": true
 }
